env/code_53f22b8ca7e6f/stderr.txt
  File "main.py", line 30
    for min_p, max_p in test_cases:
    ^
IndentationError: expected an indented block
